jilles      2005/10/25 13:55:01 UTC	(20051025-3189)
  Log:
  Add Id tag.
  

  Changes:	Modified:
  +2 -0		trunk/doc/IRCD (File Modified) (Property Modified)


jilles      2005/10/24 00:38:37 UTC	(20051024-3187)
  Log:
  The hyperion module now support +jLPQ.
  

  Changes:	Modified:
  +1 -1		trunk/doc/IRCD (File Modified) 


jilles      2005/10/24 00:25:23 UTC	(20051024-3185)
  Log:
  Create new channels with modes +nt modified by mlock.
  

  Changes:	Modified:
  +6 -2		trunk/src/services.c (File Modified) 


jilles      2005/10/24 00:09:09 UTC	(20051024-3183)
  Log:
  Add parameter 'sendnow' to check_modes(), to optionally
  avoid doing cmodes (for use in join() creating a
  channel).
  

  Changes:	Modified:
  +1 -1		trunk/include/extern.h (File Modified) 
  +1 -1		trunk/modules/chanserv/main.c (File Modified) 
  +1 -1		trunk/modules/chanserv/set.c (File Modified) 
  +17 -9	trunk/src/cmode.c (File Modified) 


jilles      2005/10/23 23:55:19 UTC	(20051023-3181)
  Log:
  More mlock +kl fixes.
  

  Changes:	Modified:
  +6 -14	trunk/src/cmode.c (File Modified) 


nenolod     2005/10/23 23:36:50 UTC	(20051023-3179)
  Log:
  Some updates to doc/IRCD.
  

  Changes:	Modified:
  +14 -0	trunk/doc/IRCD (File Modified) 


jilles      2005/10/23 23:22:20 UTC	(20051023-3177)
  Log:
  Add char *channel_modes(channel_t *c, boolean_t doparams)
  to return the simple modes of a channel as a string,
  with or without parameters.
  

  Changes:	Modified:
  +1 -0		trunk/include/extern.h (File Modified) 
  +43 -0	trunk/src/cmode.c (File Modified) 


jilles      2005/10/23 23:14:41 UTC	(20051023-3175)
  Log:
  Fixes to mlock +kl.
  

  Changes:	Modified:
  +21 -11	trunk/modules/chanserv/info.c (File Modified) 
  +15 -11	trunk/modules/chanserv/set.c (File Modified) 


jilles      2005/10/23 22:49:41 UTC	(20051023-3173)
  Log:
  Remove +kl from mode_list, fixing lots of issues with them
  (they take parameters).
  

  Changes:	Modified: